--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .leaflet-container {
   height: 600px;
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 
