--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 
 .leaflet-container {
   height: 600px;
-  width: 70%;
-  margin: 0 auto;
+  width: 100%;
+  padding: auto 0;
 }
 
 .leaflet-div-icon {
