--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 .leaflet-container {
-  height: 600px;
+  height: 800px;
   width: 100%;
   padding: auto 0;
 }
@@ -13,4 +13,15 @@
 .leaflet-div-icon {
   background: transparent;
   border: none;
+}
+
+.ant-modal,
+.ant-modal-content {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  top: 0;
+}
+.ant-modal-body {
+  height: calc(100vh - 110px);
 }
