--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,19 @@
   border: none;
 }
 
-.ant-modal,
-.ant-modal-content {
+.ant-modal {
   height: 100vh;
   width: 100vw;
   margin: 0;
   top: 0;
 }
+
+.ant-modal-content {
+  height: 90vh;
+  width: 80vw;
+  left: 10vw;
+}
+
 .ant-modal-body {
-  height: calc(100vh - 110px);
+  height: calc(100vh - 300px);
 }
